lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:4: error: illegal start of statement (no modifiers allowed here)
  override def step() {
  ^